[js] unfinished todo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <link rel="stylesheet" href="style.css"></scrip==>
     <script defer src="greeting.js"></script>
     <script defer src="time.js"></script>
+    <script defer src="toDo.js"></script>
 </head>
 <body>
+    <!--time-->
    <h3 class="time">00:00</h3>
 
+   <!--greeting-->
    <form class="js-nameForm nameForm">
        <input class="js-nameInput" type="text" placeholder="what is your name?">
    </form>
    <h4 class="js-greeting greeting"></h4>
+
+<!--todoForm-->
+<form class="js-toDoForm">
+    <input class="js-toDoInput" type="text" placeholder="what you gonna do?">
+</form>
+<ul class="js-toDoList"></ul>
 </body>
 </html>
+
