--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="greeting.js"></script>
     <script defer src="time.js"></script>
     <script defer src="toDo.js"></script>
+    <script defer src="background-image.js"></script>
 </head>
 <body>
     <!--time-->
