--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="time.js"></script>
     <script defer src="toDo.js"></script>
     <script defer src="background-image.js"></script>
+    <script defer src="weather.js"></script>
 </head>
 <body>
     <!--time-->
@@ -26,6 +27,10 @@
     <input class="js-toDoInput" type="text" placeholder="what you gonna do?">
 </form>
 <ul class="js-toDoList"></ul>
+
+
+<span class="js-weather"></span>
+
 </body>
 </html>
 
